--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "ws-array",
   "version": "1.0.0",
   "private": true,
+  "keywords": [
+    "array"
+  ],
   "homepage": "https://github.com/bluelovers/ws-array#readme",
   "bugs": {
     "url": "https://github.com/bluelovers/ws-array/issues"
@@ -39,6 +42,9 @@
     "ci:build": "echo ci:build",
     "lerna:publish": "yarn run prepublishOnly:root && lerna publish && yarn run postpublishOnly",
     "lerna:publish:yes": "yarn run prepublishOnly:root && lerna publish --yes --bump patch && yarn run postpublishOnly",
+    "lerna:publish:yes:major": "yarn run prepublishOnly:root && lerna publish --no-private --yes --bump major && yarn run postpublishOnly",
+    "lerna:publish:yes:minor": "yarn run prepublishOnly:root && lerna publish --no-private --yes --bump minor && yarn run postpublishOnly",
+    "lerna:publish:yes:patch": "yarn run prepublishOnly:root && lerna publish --no-private --yes --bump patch && yarn run postpublishOnly",
     "ws:fix-all": "yarn-tool fix-all  --overwriteHostedGitInfo",
     "ws:fix-all:resetStaticFiles": "yarn run ws:fix-all -- --resetStaticFiles",
     "preversion": "yarn run test",
@@ -76,25 +82,25 @@
     "array-unique-deep": "^1.0.1",
     "debug-color2": "^1.3.2",
     "deep-eql": "= 4.0.0",
-    "just-unique": "^4.1.1",
+    "just-unique": "^4.2.0",
     "lodash.uniq": "^4.5.0",
     "strip-ansi": "<7 >=6",
     "tfk-unique-array": "^2.0.0",
-    "tsd": "^0.24.1",
-    "tslib": "^2"
+    "tsd": "^0.30.7",
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
-    "@bluelovers/tsconfig": "^1.0.31",
-    "@types/array-unique": "^0.3.0",
-    "@types/jest": "^29.1.2",
-    "@types/lodash": "^4.14.186",
-    "@types/lodash.uniq": "^4.5.7",
-    "@types/node": "*",
-    "@yarn-tool/ws-find-up-paths": "*",
-    "jest": "^29.2.0",
-    "ts-jest": "^29.0.3"
+    "@bluelovers/tsconfig": "^1.0.35",
+    "@types/array-unique": "^0.3.3",
+    "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.14.202",
+    "@types/lodash.uniq": "^4.5.9",
+    "@types/node": "^20.11.25",
+    "@yarn-tool/ws-find-up-paths": "^1.0.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2"
   },
   "peerDependencies": {
-    "lerna": "^6.0.1"
+    "lerna": "^8.1.2"
   }
 }
